Bug 1528265 - P1. Revert changes introduced by bug 1487797. r=chunmin

It didn't take into account that there could be a mixture of variable block size and fixed block size and could use the start time of an invalid block to determine the end of the previous frame as the code relied on Frame::FindNext() to have always returning a valid frame; but this isn't always the case.

We also want to keep the scope of each classes separate, so that it is up to the FrameParser to correct a Frame should it be invalid or not set properly.

Differential Revision: https://phabricator.services.mozilla.com/D66989